Closed
Bug 313025
Opened 20 years ago
Closed 20 years ago
When Camino is hidden with multiple tabs, attempting to quit it should unhide it with confirm-close-on-quit dialog
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Camino1.0
People
(Reporter: samuel.sidler+old, Assigned: sfraser_bugs)
References
Details
(Keywords: fixed1.8)
Attachments
(1 file)
|
1.18 KB,
patch
|
Details | Diff | Splinter Review |
If a user has a window with multiple tabs and hides Camino, then selects "Quit"
from the dock icon menu, Camino should re-appear from it's hide and bring up the
"Confirm Multiple Tab Close" allowing the user to confirm before they close.
STR:
1. Open multiple tabs
2. Hide Camino
3. Select Quit from Camino's dock icon
Actual Results:
Camino's dock icon just bounces.
Expected Results:
Camino should come back from hiding with the dialog up.
| Assignee | ||
Comment 1•20 years ago
|
||
I'm not sure how to fix this. We're stuck inside of -runModalForWindow.
Status: NEW → ASSIGNED
Target Milestone: --- → Camino1.0
The same happens if one uses COMMAND+TAB to select Camino then hit Q without
releasing COMMAND.
Comment 3•20 years ago
|
||
Are we/should we be calling makeKeyAndOrderFront: on the window first?
| Assignee | ||
Comment 4•20 years ago
|
||
(In reply to comment #3)
> Are we/should we be calling makeKeyAndOrderFront: on the window first?
We aren't, and should not be (according to the docs).
| Assignee | ||
Comment 5•20 years ago
|
||
I think this is the safest way; activate the app before showing the dialog. I
tried running an NSRunAlertPanel() in a test app in the same way, and it does
activate the app.
| Assignee | ||
Comment 6•20 years ago
|
||
Fixed on trunk and branch.
| Reporter | ||
Updated•18 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•