Fix bug 313025: if quitting via the Dock menu while Camino is hidden, activate it before showing the quit warning dialog.